# LearnOpenMP

./: CMakeLists.txt  README.md
examples/: coding.c  dot.c  firstprivate.c  hello.c  hello_world.c  lastprivate.c  master_task.c  private.c  self_def.c  shared.c  single.c  single_task.c  task.c  threadprivate.c  vec_add.c
