cmake_minimum_required(VERSION 3.25)
project(LearnOpenMP C)

set(CMAKE_C_STANDARD 11)

FIND_PACKAGE(OpenMP REQUIRED)
if(OPENMP_FOUND)
    message("OPENMP FOUND")
    set(CMAKE_C_FLAGS "${CMAKE_C_FLAGS} ${OpenMP_C_FLAGS}")
    set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} ${OpenMP_CXX_FLAGS}")
endif()

add_executable(hello_world examples/hello_world.c)
add_executable(vec_add examples/vec_add.c)
add_executable(coding examples/coding.c)
add_executable(hello examples/hello.c)
add_executable(single examples/single.c)
add_executable(dot examples/dot.c)
add_executable(self_def examples/self_def.c)
add_executable(master_task examples/master_task.c)
add_executable(single_task examples/single_task.c)
add_executable(task examples/task.c)
add_executable(shared examples/shared.c)
add_executable(private examples/private.c)
add_executable(firstprivate examples/firstprivate.c)
add_executable(lastprivate examples/lastprivate.c)
add_executable(threadprivate examples/threadprivate.c)

SET(EXECUTABLE_OUTPUT_PATH ${PROJECT_SOURCE_DIR}/bin)